# tercel

./: Cargo.toml  Makefile  PROJECT  README.md  go.mod  go.sum
agent/: Cargo.toml
api/: Cargo.toml
api/network/v1/: fabric_types.go  groupversion_info.go  zz_generated.deepcopy.go
api/provisioning/v1/: groupversion_info.go  machine_types.go  zz_generated.deepcopy.go
api/src/: main.rs
apis/: Cargo.toml
apis/src/: lib.rs
apis/src/v1/: mod.rs
apis/src/v1alpha1/: fabric.rs  mod.rs
apiserver/: Cargo.toml
apiserver/migrations/: 20231202213300-init.sql
apiserver/src/: main.rs
apiserver/src/handlers/: fabric.rs  mod.rs
apiserver/src/storage/: db.rs  mod.rs
client/: Cargo.toml
client/src/: lib.rs
cmd/: main.go
config/crd/: kustomization.yaml
config/crd/bases/: network.yangtze.xflops.cn_fabrics.yaml  provisioning.yangtze.xflops.cn_machines.yaml
config/default/: kustomization.yaml
config/manager/: manager.yaml
config/prometheus/: monitor.yaml
config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  fabric_editor_role.yaml  fabric_viewer_role.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: kustomization.yaml  network_v1_fabric.yaml
controller/: Cargo.toml
controller/src/: main.rs
controller/src/fabrics/: mod.rs
controller/src/framework/: mod.rs
controller/src/switches/: discovered.rs  mod.rs
controller/src/xpus/: mod.rs
hack/: boilerplate.go.txt
internal/controller/network/: fabric_controller.go  suite_test.go
internal/controller/provisioning/: machine_controller.go
yzctl/: Cargo.toml
yzctl/src/: helper.rs  list.rs  main.rs
