[workspace]

members = [
    "api",
    "controller",
    "agent"
]

[workspace.package]
edition = "2021"
license-file = "LICENSE"
authors = ["XFLOPS Engineering <support@xflops.cn>"]

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }

[profile.release]
debug = true # Enable debuginfo
debug-assertions = true # Add some extra assurance during development
overflow-checks = true # Add some extra assurance during development

