[workspace]

members = [
    "apis",
    "apiserver",
    "controller",
    "agent",
    "client",
    "yzctl",
]

[workspace.package]
edition = "2021"
license-file = "LICENSE"
authors = ["XFLOPS Engineering <support@xflops.cn>"]

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
async-trait = {version = "0.1"}
uuid = {version = "1"}
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3"}


[profile.release]
debug = true # Enable debuginfo
debug-assertions = true # Add some extra assurance during development
overflow-checks = true # Add some extra assurance during development
