[package]
name = "yangtze-apis"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
uuid = {workspace = true, features=["v4", "serde"]}

thiserror= {version = "1"}
actix-web = "4"