[package]
name = "yangtze-client"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yangtze-apis = { path = "../apis" }

tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}

hyper = { version = "1", features = ["full"] }
hyper-tls = { version = "0.6"}
bytes = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

base64 = "0.21"
thiserror = "1.0"
url = { version = "2", features = ["serde"] }

