[package]
name = "yangtze-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

yangtze-apis = { path = "../apis" }
yangtze-client = { path = "../client" }

async-trait = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}

futures = "0.3"