[package]
name = "yzctl"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yangtze-apis = { path = "../apis" }
yangtze-client = { path = "../client" }

tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}

clap = { version = "4", features = ["derive"] }